2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.19~.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.18.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (AC_CONFIG_FILES): Generate maemo-summoner.1.
	* launcher/launcher.c: Do not include <sys/prctl.h> nor <dlfcn.h>
	anymore. Include 'prog.h'.
	(entry_t, prog_t): Move type definitions to ...
	* launcher/prog.h: ... here. New file.
	(prog_t): Likewise.
	* launcher/launcher.c (environment, print_prog_env_argv, load_main)
	(set_process_name, set_progname): Move declarations to ...
	* launcher/prog.c: ... here. New file.
	* launcher/summoner.c: New file.
	* launcher/summoner.1.in: Likewise.
	* launcher/Makefile.am (bin_PROGRAMS): Add maemo-summoner.
	(maemo_launcher_SOURCES): Add 'prog.c' and 'prog.h'.
	(maemo_summoner_SOURCES): New variable.
	(maemo_summoner_CPPFLAGS): Likewise.
	(maemo_summoner_LDADD): Likewise.
	(dist_man_MANS): Add maemo-summoner.1.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (launch_process): Move program environment and
	argv debugging prints to ...
	(print_prog_env_argv): ... here. New function.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (prog_t): Add an entry member.
	(launch_process): Use load_main and prog->entry when calling the entry
	point, and move the logic to load the main symbol to ...
	(load_main): ... here. New function.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/booster_null.c (booster_api): Renamed to ...
	(booster_null_api): ... this.
	* launcher/booster_gtk.c (booster_api): Renamed to ...
	(booster_gtk_api): ... this.
	* launcher/booster.c (booster_module_load): Dynamically generate
	booster_sym using the booster name. Statically prefix the
	booster_patch with MAEMO_BOOSTER_DIR. Free booster_path and
	booster_sym.

2006-09-27  Guillem Jover  <guillem.jover@nokia.com>
