@@ -22,6 +22,7 @@
 
 #include <stddef.h>
 #include <stdbool.h>
+#include <stdlib.h>
 #include <string.h>
 #ifdef HAVE_PRCTL_SET_NAME
 #include <sys/prctl.h>
